PreviewJob: skip remote directories. Too expensive to preview.

For some protocols, file_copy() would end up copying the whole
directory locally!

FIXED-IN: 5.35
BUG: 208625